--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -13,7 +13,7 @@ layout: default
       <div class="row">
         <div class="col-lg-8 col-md-10 mx-auto">
           <div class="page-heading">
-            <h1>SQUARE<br/>ZERO</h1>
+            <h1>The<br/>Layman<br/>Project</h1>
             {% if site.description %}
               <span class="subheading">{{ site.description }}</span>
             {% endif %}
@@ -30,7 +30,7 @@ layout: default
         {{ content }}
 
         <!-- Home Post List -->
-        {% for post in site.posts limit : 10 %}
+        {% for post in site.posts limit : 15 %}
 
           <article class="post-preview">
             <a href="{{ post.url | prepend: site.baseurl | replace: '//', '/' }}">
